--- a/Ejemplos/01 Ejemplos Iniciales/03 - Cambia.html
+++ b/Ejemplos/01 Ejemplos Iniciales/03 - Cambia.html
@@ -13,7 +13,7 @@
 
     <script>
         function myFunction() {
-            document.getElementById("demo").innerHTML = "¡Feliz Navidad!";
+            document.getElementById("demo").innerHTML = "¡Feliz Primer Trimestre!";
             document.getElementById("demo").style.fontSize = "25px";
             document.getElementById("demo").style.color = "red";
             document.getElementById("demo").style.backgroundColor = "yellow";
