--- a/Ejemplos/01 Ejemplos Iniciales/08 - QuerySelectorAll.html
+++ b/Ejemplos/01 Ejemplos Iniciales/08 - QuerySelectorAll.html
@@ -14,7 +14,7 @@
 
     <div id="miDIV">
         <h2 class="ejemplo">Una cabecera con clase="ejemplo" in div</h2>
-        <p class="ejemplo">A paragraph with class="ejemplo" in div.</p>
+        <p class="ejemplo">Un párrafo con class="ejemplo" in div.</p>
         <p class="ejemplo">Al clicar el botón añades diferentes colores de fondo a los dos primeros elementos del div
             con class="ejemplo" (index 0).</p>
     </div>
