--- a/Ejemplos/01 Ejemplos Iniciales/09 - Combinando.html
+++ b/Ejemplos/01 Ejemplos Iniciales/09 - Combinando.html
@@ -20,7 +20,7 @@
     <script>
         function miFuncion1() {
             var x = document.getElementById("miDIV");
-            x.querySelector(".ejemplo").innerHTML = "¡Hola DW2E!";
+            x.querySelector(".ejemplo").innerHTML = "¡Hola DA2D1E!";
         }
         function miFuncion2() {
             var x = document.getElementById("miDIV");
