--- a/Ejemplos/01 Ejemplos Iniciales/06 - Countdown.html
+++ b/Ejemplos/01 Ejemplos Iniciales/06 - Countdown.html
@@ -84,7 +84,7 @@
 
 <body>
   <div class="container">
-    <h1>Countdown to New Year</h1>
+    <h1>Cuenta hasta final trimestre</h1>
     <div id="countdown">
       <ul>
         <li><span id="days"></span>days</li>
@@ -102,7 +102,7 @@
         hour = minute * 60,
         day = hour * 24;
 
-      let newyear = "Jan 01, 2024 00:00:00";
+      let newyear = "Mar 01, 2023 00:00:00";
       let countDown = new Date(newyear).getTime(),
         x = setInterval(function () {
 
