--- a/Ejemplos/01 Ejemplos Iniciales/8a AmbitosDebug.html
+++ b/Ejemplos/01 Ejemplos Iniciales/8a AmbitosDebug.html
@@ -15,10 +15,10 @@
             ejemplo = 3; // Variable no declarada
             if (ejemplo === 3) {
                 var variable1 = "No Entré";  //variable viva en todo el scriot
-                let soloaqui = 2;   // Variable que solo pertenece a este ambito
+                 soloaqui = 2;   // Variable que solo pertenece a este ambito
                 if (soloaqui = 4) {
                     ++soloaqui;     //y a sus hijos
-                    variable1="Entré"
+                    variable1="Entré mucho"
                 }
             }
             console.log(variable1); // variable1 existe aquí
