Todo el recursivo

--- a/Ejemplos/02 Ejemplos de Funciones/02 Lambda Const.html
+++ b/Ejemplos/02 Ejemplos de Funciones/02 Lambda Const.html
@@ -21,9 +21,9 @@
 
         const cuadrado1 = (x) => { return x * x; };
         const cuadrado2 = x => x * x;
-        const bocina = () => {
+        const bocina = y => {
             console.log("Meec");
-        };
+        }
         
     </script>
 </body>
