--- a/Ejemplos/02 Ejemplos de Funciones/08 Encapsulado.html
+++ b/Ejemplos/02 Ejemplos de Funciones/08 Encapsulado.html
@@ -16,6 +16,7 @@
         }
         let valorUno = valorEncapsulado(1);
         let valorDos = valorEncapsulado(2);
+        console.log(valorUno);
         console.log(valorUno());
         console.log(valorDos());
 
