--- a/Ejemplos/03 Objetos/03 Array Push y Pop.html
+++ b/Ejemplos/03 Objetos/03 Array Push y Pop.html
@@ -10,12 +10,14 @@
 
 <body>
     <script>
-        let secuencia = [1, 2, 3];
+        let secuencia = [1, 2];
         secuencia.push(4);
         secuencia.push(5);
         console.log(secuencia);
         console.log(secuencia.pop());
-        console.log(secuencia);
+        console.log(secuencia.push(8));
+        long=secuencia.push("Fer")
+       console.log(secuencia)
     </script>
 </body>
 
