--- a/Ejemplos/03 Objetos/10 Desestructurando.html
+++ b/Ejemplos/03 Objetos/10 Desestructurando.html
@@ -20,7 +20,7 @@
         let { nombre2 } = { nombre2: "Esteban", edad: 23 };
         console.log(nombre2);
         //Ojo esto no funciona: Descoméntalo y ejecutalo a ver que pasa. Prueba, p.ej. a ponerle un let
-         let { nombre3 } = { nombre3: "Esteban", edad: 23 };
+         //{ nombre3 } = { nombre3: "Esteban", edad: 23 };
         console.log(nombre3)
     </script>
 </body>
