--- a/Ejemplos/03 Objetos/13 Ejercicio2.html
+++ b/Ejemplos/03 Objetos/13 Ejercicio2.html
@@ -11,12 +11,44 @@
 <body>
     <script>
         //AQUI TU CODIGO
+
+        function rango(inicio, fin, paso) {
+
+            let arrayNumeros = [];
+
+            if (paso == undefined) {
+                paso=1;
+                for (let i = 0; inicio <= fin; i++) {
+                    arrayNumeros[i] = inicio;
+                    inicio++
+                }
+            }else if(paso<0){
+                for(let i=0;inicio>=fin;i++){
+                    arrayNumeros[i]=inicio
+                    inicio+=paso;
+                }
+            } else {
+                for (let i = 0; inicio <= fin; i++) {
+                    arrayNumeros[i] = inicio
+                    inicio+=paso;
+                }
+            }
+
+
+            return arrayNumeros;
+
+        }
+
+
+        console.log(rango(1,10,2));
+        console.log(rango(5,2,-1))
+/* 
         console.log(reverseArray(["A", "B", "C"]));
         // → ["C", "B", "A"];
         let array = [1, 2, 3, 4, 5];
         reverseArrayEnSuSitio(array);
         console.log(array);
-        // → [5, 4, 3, 2, 1]
+        // → [5, 4, 3, 2, 1] */
     </script>
 </body>
 
