--- a/Ejemplos/04 Funciones Orden Mayor/Ejercicio Carrito.html
+++ b/Ejemplos/04 Funciones Orden Mayor/Ejercicio Carrito.html
@@ -28,6 +28,8 @@
             },
         ];
 
+        console.log("El total de la compra del carrito es de: " + carrito.reduce((a,v)=> a+v.precio*v.cant,0) + "€")
+
     </script>
 </body>
 
