Añado nuevos archivos

--- a/Ejemplos/04 Funciones Orden Mayor/04 Filtering.html
+++ b/Ejemplos/04 Funciones Orden Mayor/04 Filtering.html
@@ -21,6 +21,7 @@
             return filtrados;
         }
         console.log(filter(SCRIPTS, script => script.living));
+        console.log(SCRIPTS.filter(e => e.living==false));
     </script>
 </body>
 
