--- a/Ejemplos/04 Funciones Orden Mayor/Ejercicio 1.html
+++ b/Ejemplos/04 Funciones Orden Mayor/Ejercicio 1.html
@@ -14,7 +14,8 @@
         // Tu CODIGO AQUI.
         
 
-        console.log(arrays.reduce((a,v)=>{return a.concat(v)}))
+        console.log(arrays.reduce((a,v)=> a.concat(v)))
+        
 
     // → [1, 2, 3, 4, 5, 6]
     </script>
