--- a/Ejemplos/03 Objetos/05 Arrays de Objetos.html
+++ b/Ejemplos/03 Objetos/05 Arrays de Objetos.html
@@ -27,6 +27,7 @@
 
         console.log(typeof diario)
         // Añade código para acceder al cuarto evento del segundo objeto en diario --> La respuesta es "lasaña"
+        console.log(diario[1].eventos[3]);
 
     </script>
 </body>
