--- a/Ejemplos/08 Concurrencia - dos callbacks independientes/09a.html
+++ b/Ejemplos/08 Concurrencia - dos callbacks independientes/09a.html
@@ -23,12 +23,12 @@
         const mensaje = $mensaje.value;
         if (!mensaje) return alert("Escribe un mensaje");
         if (window.opener) {
-            window.opener.establecerMensaje(mensaje);
+            window.opener.MensajeAlPadre(mensaje);
         }
     });
 
     // Definición de función desde la que nos llama el padre
-    window.establecerMensaje = function (mensaje) {
+    window.MensajeAlHijo = function (mensaje) {
         $mensajeRecibido.textContent = mensaje;
     }
 </script>
